# InverseDiffusionEMMultiModalSourceProblem

./: .gitignore  AGENTS.md  BATCHED_PIPELINE_GUIDE.md  FINAL_VALIDATION_SUMMARY.md  JUDGE_VOLODYA.md  MIGRATION_NOTES.md  MLFLOW_GUIDE.md  PHYSICS_LAYER_AUDIT_RESULTS.md  PIPELINE_VALIDATION_REPORT.md  Perplexity_2026-05-07_03-30-55-2.md  Perplexity_2026-05-07_03-30-55.md  README.md  RESEARCHER.md  STREAMING_PIPELINE_IMPLEMENTATION.md  STREAMING_SUCCESS_VERIFICATION.md  Yandex_template_Arial_ppt.pptx  analyze_data_scaling.py  debug_m_indexing.py  debug_torch_harmonics.py  final_exps_13_05.txt  fixed_coefficient_mapping.py  generate_physics_plots.py  gradient_flow_investigation_results.md  physics_layer_fix_analysis.md  physics_training_success_report.md  pyproject.toml  quick_streaming_test.py  requirements-dev.txt  requirements-ml.txt  requirements.txt  ruff.toml  scaling_analysis_summary.md  test_batched_pipeline.py  test_fixed_training.py  test_gradient_flow.py  test_load.py  test_memory_fix.py  test_physics_fix.py  test_physics_integration.py  test_physics_stability.py  (+5 more)
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: real_augmented_l5.yaml  synthetic_l15.yaml  synthetic_l15_baseline.yaml  synthetic_l4_tiny.yaml
configs/features/: cv_only.yaml  pca_cv.yaml  power_pca.yaml  power_pca_small.yaml  raw_flat.yaml  raw_plus_sh.yaml  subsample_stride4.yaml
configs/loss/: coef_mse.yaml  physics_power.yaml  physics_power_combined.yaml  physics_power_mixed.yaml  physics_power_rank.yaml
configs/model/: linear.yaml  mlp_2x16.yaml  mlp_2x256.yaml  mlp_2x32.yaml  mlp_2x512.yaml  mlp_2x64.yaml  mlp_3x200.yaml  mlp_4x60.yaml  mlp_5x200.yaml  mlp_bottleneck.yaml  mlp_pyramid.yaml  mlp_residual.yaml  mlp_small.yaml  multi_head_mlp_4x60.yaml  (+2 more)
data/: README.md
docs/: architecture.md  config_cookbook.md  getting_started.md  metrics_notes.md  migration_guide.md  mlflow_runbook.md  numerical_shapes.md  physics_aware_models.md  physics_layer_notes.md  pipeline_overview.md  tensor_shapes.md
experiments/: QUICK_START.md  README.md  __init__.py  demo_plots.py  example_train.py  generate_plots.py  mlflow.db  train_simple.py
models/: __init__.py
paper/: 00_front_matter.md  01_introduction.md  02_chapter1_physics.md  03_chapter2_data.md  04_chapter3_models.md  05_chapter4_losses_training.md  06_chapter5_metrics_datasets.md  07_chapter6_experiments.md  08_chapter7_framework.md  09_conclusion.md  10_references.md  JUDGE_VKR.md  JUDGE_VKR_REVIEW_chapter3.md  JUDGE_VKR_REVIEW_chapter4.md  JUDGE_VKR_REVIEW_chapter5.md  JUDGE_VKR_REVIEW_chapter7.md  JUDGE_VKR_REVIEW_conclusion.md  THESIS_PLAN.md  THESIS_PLAN_comments.md  combined.md  diploma.docx  diploma_ch1_test.docx  main.tex  proposal.md  Положение о выпускной квалификационной работе студентов МФТИ.docx
plans/: chapter6_plan.md
presentation/: ch1_full.aux  ch1_full.md  ch1_full.out  ch1_full.tex  ch2_review.md  ch2_review_1.md  figures.md  h1.md  header.md  paper_full.html  paper_full.md  paper_full.tex  ~$Фамилия_Имя_Предзащита.pptx  Фамилия_Имя_Предзащита_CheckList.md  Фамилия_Имя_Предзащита_QA.md
scripts/: aggregate_baseline_S1.py  aggregate_experiments.py  build_predefense_pptx.py  import_legacy_real_antenna.py  plot_distributions_clean.py  plot_holdout_3d_field.py  plot_mlp_2x32.py  run_baseline_S1.py  run_baseline_S2.py  run_baseline_S2_inprocess.py  run_baseline_S3.py  run_baseline_S3_inprocess.py  run_baseline_inprocess.py  run_real_augmented.py  run_staged_real_augmented.py  select_best_step.py  start_mlflow_platform.py  start_mlflow_server.py  start_mlflow_server.sh
src/: __init__.py
tests/: __init__.py  conftest.py
(+538 files in other folders)
