[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mpinv"
version = "0.1.0"
description = "Phaseless multipole-coefficient inversion: a research framework for learned vector-spherical-harmonic regression on antenna far-field power patterns."
readme = "README.md"
requires-python = "==3.12.*"
license = "MIT"
authors = [{ name = "diplom" }]

dependencies = [
    "numpy>=2.1,<3",
    "scipy>=1.14,<2",
    "scikit-learn>=1.5,<2",
    # torch 2.6+ wires every optimizer method through `torch._compile.inner`, which
    # eagerly imports `torch._dynamo` -> `torch._inductor` -> `triton.backends`. The
    # triton stub we ship for macOS does not cover that surface. Cap at < 2.6 on
    # macOS for a clean development experience; CI/Linux can use the latest torch
    # because triton is fully available there.
    "torch>=2.4,<2.6",
    # 0.6.5 is the last release with a pure-Python wheel (works on macOS arm64 and
    # Linux). Newer releases (0.7+) ship as C++/CUDA sdists that need nvcc to build.
    # The InverseRealVectorSHT public API is the same in 0.6.5 and 0.9.0, so the
    # framework code is forward-compatible. See R1 in
    # research/framework-rebuild/manifest.md.
    "torch-harmonics==0.6.5",
    "hydra-core==1.3.2",
    "omegaconf>=2.3,<3",
    "mlflow>=3.10,<4",
    "optuna>=4.0,<5",
    "optuna-integration[mlflow]>=4.0,<5",
    "matplotlib>=3.9,<4",
    "tqdm>=4.66,<5",
    "psutil>=6.0,<8",
    "pyyaml>=6.0,<7",
    "python-pptx>=1.0.2",
    "pymupdf>=1.27.2.3",
]

[project.optional-dependencies]
cv = [
    "scikit-image>=0.24,<1",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-xdist>=3.6,<4",
    "ruff>=0.7,<1",
    "ty>=0.0.1a13",
    "pre-commit>=4.0,<5",
    "ipykernel>=6.29,<7",
]

[project.scripts]
mpinv-train = "mpinv.cli.train:main"
mpinv-evaluate = "mpinv.cli.evaluate:main"
mpinv-sweep = "mpinv.cli.sweep:main"
mpinv-generate-data = "mpinv.cli.generate_data:main"
mpinv-validate-physics = "mpinv.cli.validate_physics:main"
mpinv-report = "mpinv.cli.report:main"
mpinv-data-stats = "mpinv.cli.data_stats:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mpinv"]

[tool.uv]
# Constrain universal resolution to platforms we actually develop / deploy on,
# so uv does not try to satisfy Linux-only optional deps (e.g. triton) on macOS.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# torch-harmonics 0.6.5's _disco_convolution submodule imports `triton` at module
# load time, but triton has no macOS arm64 wheels. On macOS we redirect the
# `triton` requirement to a no-op stub at vendor/triton-stub; on Linux x86_64 we
# use the real triton from PyPI (via override-dependencies below). The
# torch-harmonics convolution path is never exercised in this framework (we use
# only the SHT API).
override-dependencies = [
    "triton ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "triton ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
triton = [
    { path = "vendor/triton-stub", marker = "sys_platform == 'darwin'" },
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests that take more than ~5s",
    "gpu: tests that need a CUDA device",
    "integration: end-to-end tests",
    "physics: physics-layer regression tests",
]
filterwarnings = [
    "error::FutureWarning",
    "ignore::DeprecationWarning:google.*",
]
